# exl

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
include/exl/: box.hpp  in_place.hpp  matchers.hpp  mixed.hpp  mixed_option.hpp  none.hpp  option.hpp  poly.hpp
include/exl/details/box/: deleter_function.hpp  deleter_object.hpp  get_default_deleter.hpp
include/exl/impl/: mixed_storage_operations.hpp  type_list.hpp
include/exl/impl/box/: boxed_ptr.hpp  default_delete.hpp  get_deleter_function_type.hpp  is_deleter_function.hpp
include/exl/impl/mixed/: markers.hpp  mixed_storage_operations.hpp  type_list.hpp
libs/: CMakeLists.txt
tests/: CMakeLists.txt  box.cpp  box_invalid_dereferencing_test.cpp  class_mock.h  matchers.cpp  mixed.cpp  mixed_invalid_unwrap_exact_test.cpp  mixed_invalid_unwrap_test.cpp  mixed_option.cpp  option.cpp  tests.cpp  type_list.cpp
tests/box/: box.cpp  box_invalid_dereferencing_test.cpp
tests/box/details/: deleter_function.cpp  deleter_object.cpp
tests/box/impl/: boxed_ptr.cpp  is_deleter_function.cpp
tests/matchers/: matchers.cpp
tests/mixed/: mixed.cpp  mixed_invalid_unwrap_exact_test.cpp  mixed_invalid_unwrap_test.cpp  nested_mixed.cpp
tests/mixed/impl/: type_list.cpp
tests/mock/: ClassMock.cpp  ClassMock.hpp
tests/option/: option.cpp
tests/test-utils/: ClassMock.cpp  ClassMock.hpp  FakeDeletionObject.hpp  StubDeleter.hpp  deleter_function_stub.hpp  stub_class_deleter_hierarchy.hpp  stub_class_hierarchy.hpp
tests/utils/: AllocObject.hpp  ClassMock.cpp  termination_test.hpp
